completing swagger and creating README.md
